--- a/things-number-field.html
+++ b/things-number-field.html
@@ -113,7 +113,7 @@ Example:
              *[10000.23,'0,0','10,000']
              *[-10000,'0,0.0','-10,000.0']
              *[10000.1234,'0.000','10000.123']
-             *[-10000,'(0,0.0000)','(10,000.0000)']
+             *[-10000,'(0,0.0000)','(-10,000.0000)']
              *[-0.23,'.00','-.23']
              *[-0.23,'(.00)','(.23)']
              *[0.23,'0.00000','0.23000']
@@ -240,7 +240,7 @@ Example:
          * 수동 validation check function
          */
         validate: function() {
-            this.isValid = this.$.input.validate();
+            this.isValid = this.$['number-field'].validate();
         },
 
         /**
@@ -249,7 +249,7 @@ Example:
         _valueChanged: function(bindValue) {
             this._changeDisplayValue();
             if (this.autoValidate) {
-                this.isValid = this.$.input.validate();
+                this.isValid = this.$['number-field'].validate();
             }
         },
 
