add readOnly and disable propertie

--- a/things-number-field.html
+++ b/things-number-field.html
@@ -40,6 +40,8 @@ Example:
       type="text"
       bind-value="[[displayValue]]"
       placeholder="[[placeholder]]"
+      readonly$="[[readonly]]"
+      disabled="[[disabled]]"
       tabindex$="[[tabIndex]]"
       on-focus="_onTextFieldFocused">
     </input>
