--- a/things-number-field.html
+++ b/things-number-field.html
@@ -1,15 +1,15 @@
 <!--
-A comment describing this element.
+이 element 사용 예
 
 Example:
 
-    <things-input-field format-with="#,###.000"></things-input-field>
+    <things-number-field format-with="#,###.000"></things-number-field>
 
 Example:
 
-    <things-input-field format-with="#,###.000">
-      <h2>Hello things-input-field format</h2>
-    </things-input-field>
+    <things-number-field format-with="#,###.000">
+      <h2>Hello things-number-field format</h2>
+    </things-number-field>
 
 @demo demo/index.html
 -->
@@ -46,7 +46,7 @@ Example:
       on-focus="_onTextFieldFocused">
     </input>
 
-    <input is="iron-input" 
+    <input is="iron-input"
       id="number-field"
       name="[[name]]"
       type="number"
@@ -73,13 +73,10 @@ Example:
     Polymer({
         is: "things-number-field",
 
-        behavior: [
-            Polymer.IronFormElementBehavior
-        ],
-
         properties: {
             /**
              * label string
+             * @type: String
              */
             label: {
                 type: String
@@ -87,6 +84,7 @@ Example:
 
             /**
              * input field name
+             * @type: String
              */
             name: {
                 type: String
@@ -94,6 +92,7 @@ Example:
 
             /**
              * input field value
+             * @type: String
              */
             value: {
                 type: String,
@@ -102,30 +101,55 @@ Example:
             },
 
             /**
+             * en-us
+             *
              * input field placeholder
+             * @type: String
+             ******
+             * ko-kr
+             *
+             * 기본으로 필드에 설정되어 있는 값
+             ******
              */
             placeholder: {
                 type: String
             },
 
             /**
-             * displayed format
+             * 포맷 형식
              *
-             *[10000,'0,0.0000','10,000.0000']
-             *[10000.23,'0,0','10,000']
-             *[-10000,'0,0.0','-10,000.0']
-             *[10000.1234,'0.000','10000.123']
-             *[-10000,'(0,0.0000)','(-10,000.0000)']
-             *[-0.23,'.00','-.23']
-             *[-0.23,'(.00)','(.23)']
-             *[0.23,'0.00000','0.23000']
-             *[1230974,'0.0a','1.2m']
-             *[1460,'0a','1k']
-             *[-104000,'0a','-104k']
-             *[1,'0o','1st']
-             *[52,'0o','52nd']
-             *[23,'0o','23rd']
-             *[100,'0o','100th']
+             *  [입력 값, 'value', '포맷후']
+             *
+             *  [10000, '0,0.0000', '10,000.0000']
+             *
+             *  [10000.23, '0,0', '10,000']
+             *
+             *  [-10000, '0,0.0', '-10,000.0']
+             *
+             *  [10000.1234, '0.000', '10000.123']
+             *
+             *  [-10000, '(0,0.0000)', '(-10,000.0000)']
+             *
+             *  [-0.23, '.00', '-.23']
+             *
+             *  [-0.23, '(.00)', '(.23)']
+             *
+             *  [0.23, '0.00000', '0.23000']
+             *
+             *  [1230974, '0.0a', '1.2m']
+             *
+             *  [1460, '0a', '1k']
+             *
+             *  [-104000, '0a', '-104k']
+             *
+             *  [1, '0o', '1st']
+             *
+             *  [52, '0o', '52nd']
+             *
+             *  [23, '0o', '23rd']
+             *
+             *  [100, '0o', '100th']
+             *  @type: String
              */
             formatWith: {
                 type: String,
@@ -134,6 +158,7 @@ Example:
 
             /**
              * 자동 validation check 활성화 여부
+             * @type: Boolean
              */
             autoValidate: {
                 type: Boolean,
@@ -142,6 +167,7 @@ Example:
 
             /**
              * type이 number일때 활성화 되며 최소값을 정의 합니다.
+             * @type: Number
              */
             min: {
                 type: Number
@@ -149,20 +175,15 @@ Example:
 
             /**
              * type이 number일때 활성화 되며 최대값을 정의 합니다.
+             * @type: Number
              */
             max: {
                 type: Number
             },
 
             /**
-             * type이 string일때 활성화 되며 입력 최소 길이를 정의 합니다.
-             */
-            minlength: {
-                type: Number
-            },
-
-            /**
              * type이 string일때 활성화 되며 입력 최대 길이를 정의 합니다.
+             * @type: Number
              */
             maxlength: {
                 type: Number
@@ -170,6 +191,7 @@ Example:
 
             /**
              * validate 함수를 통해 return 되는 값으로 초기화 하는 변수
+             * @type: Boolean
              */
             isValid: {
                 type: Boolean,
@@ -178,6 +200,7 @@ Example:
 
             /**
              * input field에 반드시 값이 포함되어야 함을 결정 합니다.
+             * @type: Boolean
              */
             required: {
                 type: Boolean,
@@ -186,6 +209,7 @@ Example:
 
             /**
              * input field readonly attribute
+             * @type: Boolean
              */
             readonly: {
                 type: Boolean,
@@ -194,6 +218,7 @@ Example:
 
             /**
              * input field disabled attribute
+             * @type: Boolean
              */
             disabled: {
                 type: Boolean,
@@ -202,6 +227,7 @@ Example:
 
             /**
              * validation check를 통해 isValid의 값이 false일때 화면에 나타나는 errorMessage
+             * @type: String
              */
             errorMessage: {
                 type: String,
@@ -246,7 +272,8 @@ Example:
         },
 
         /**
-         * autoValidate가 true일 때 bindValue의 변화를 감지해 validate 함수를 호출 합니다.
+         * autoVlidate가 true일 때 bindValue의 변화를 감지해 validate 함수를 호출 합니다.
+         * @param  {number} bindValue #### : 변환할 값을 bind해줌.
          */
         _valueChanged: function(bindValue) {
             this._changeDisplayValue();
@@ -256,15 +283,32 @@ Example:
         },
 
         /**
+         * en-us
+         *
          * focus function
+         ******
+         * ko-kr
+         *
+         * 초점을 맞춘 요소는 일반적으로 요소를 둘러싼 점선이 표시되는 형태처럼 브라우저에 의해 강조가 됩니다.
+         * focus는 키보드 관련 이벤트를 받을 수 있는 첫 번째 요소를 결정하는 데 사용됩니다.
+         *****
          */
         focus: function() {
             this.$['text-field'].focus();
         },
 
-        /**
-         * set tab index
-         */
+         /**
+          * en-us
+          *
+          * set tab index
+          ******
+          *
+          * ko-kr
+          *
+          * tab 하여 index 변화
+          * @param  {number} tabIndex : tabIndex값
+          ******
+          */
         setTabindex: function(tabIndex) {
             this.$['text-field'].setAttribute('tabindex', tabIndex);
         }
