--- a/things-number-field.html
+++ b/things-number-field.html
@@ -1,15 +1,7 @@
 <!--
-이 element 사용 예
-
 Example:
 
     <things-number-field format-with="#,###.000"></things-number-field>
-
-Example:
-
-    <things-number-field format-with="#,###.000">
-      <h2>Hello things-number-field format</h2>
-    </things-number-field>
 
 @demo demo/index.html
 -->
@@ -118,37 +110,36 @@ Example:
             /**
              * 포맷 형식
              *
-             *  [입력 값, 'value', '포맷후']
+             *  입력 값 |  value |  포맷후
+             *  10000| '0|0.0000'| '10,000.0000'
              *
-             *  [10000, '0,0.0000', '10,000.0000']
+             *  10000.23| '0|0'| '10,000'
              *
-             *  [10000.23, '0,0', '10,000']
+             *  -10000| '0|0.0'| '-10,000.0'
              *
-             *  [-10000, '0,0.0', '-10,000.0']
+             *  10000.1234| '0.000'| '10000.123'
              *
-             *  [10000.1234, '0.000', '10000.123']
+             *  -10000| '(0|0.0000)'| '(-10,000.0000)'
              *
-             *  [-10000, '(0,0.0000)', '(-10,000.0000)']
+             *  -0.23| '.00'| '-.23'
              *
-             *  [-0.23, '.00', '-.23']
+             *  -0.23| '(.00)'| '(.23)'
              *
-             *  [-0.23, '(.00)', '(.23)']
+             *  0.23| '0.00000'| '0.23000'
              *
-             *  [0.23, '0.00000', '0.23000']
+             *  1230974| '0.0a'| '1.2m'
              *
-             *  [1230974, '0.0a', '1.2m']
+             *  1460| '0a'| '1k'
              *
-             *  [1460, '0a', '1k']
+             *  -104000| '0a'| '-104k'
              *
-             *  [-104000, '0a', '-104k']
+             *  1| '0o'| '1st'
              *
-             *  [1, '0o', '1st']
+             *  52| '0o'| '52nd'
              *
-             *  [52, '0o', '52nd']
+             *  23| '0o'| '23rd'
              *
-             *  [23, '0o', '23rd']
-             *
-             *  [100, '0o', '100th']
+             *  100| '0o'| '100th'
              *  @type: String
              */
             formatWith: {
