--- a/things-number-field.html
+++ b/things-number-field.html
@@ -1,7 +1,28 @@
 <!--
-Example:
+
+## Example:
 
     <things-number-field format-with="#,###.000"></things-number-field>
+
+## Format Strings
+
+입력 값 |  value |  포맷후
+--|---|--
+10000| '0,0.0000'| '10,000.0000'
+10000.23| '0,0'| '10,000'
+-10000| '0,0.0'| '-10,000.0'
+10000.1234| '0.000'| '10000.123'
+-10000| '(0,0.0000)'| '(-10,000.0000)'
+-0.23| '.00'| '-.23'
+-0.23| '(.00)'| '(.23)'
+0.23| '0.00000'| '0.23000'
+1230974| '0.0a'| '1.2m'
+1460| '0a'| '1k'
+-104000| '0a'| '-104k'
+1| '0o'| '1st'
+52| '0o'| '52nd'
+23| '0o'| '23rd'
+100| '0o'| '100th'
 
 @demo demo/index.html
 -->
@@ -68,6 +89,7 @@ Example:
         properties: {
             /**
              * label string
+             ******
              * @type: String
              */
             label: {
@@ -76,6 +98,7 @@ Example:
 
             /**
              * input field name
+             ******
              * @type: String
              */
             name: {
@@ -84,6 +107,7 @@ Example:
 
             /**
              * input field value
+             ******
              * @type: String
              */
             value: {
@@ -96,6 +120,7 @@ Example:
              * en-us
              *
              * input field placeholder
+             ******
              * @type: String
              ******
              * ko-kr
@@ -108,39 +133,9 @@ Example:
             },
 
             /**
-             * 포맷 형식
-             *
-             *  입력 값 |  value |  포맷후
-             *  10000| '0|0.0000'| '10,000.0000'
-             *
-             *  10000.23| '0|0'| '10,000'
-             *
-             *  -10000| '0|0.0'| '-10,000.0'
-             *
-             *  10000.1234| '0.000'| '10000.123'
-             *
-             *  -10000| '(0|0.0000)'| '(-10,000.0000)'
-             *
-             *  -0.23| '.00'| '-.23'
-             *
-             *  -0.23| '(.00)'| '(.23)'
-             *
-             *  0.23| '0.00000'| '0.23000'
-             *
-             *  1230974| '0.0a'| '1.2m'
-             *
-             *  1460| '0a'| '1k'
-             *
-             *  -104000| '0a'| '-104k'
-             *
-             *  1| '0o'| '1st'
-             *
-             *  52| '0o'| '52nd'
-             *
-             *  23| '0o'| '23rd'
-             *
-             *  100| '0o'| '100th'
-             *  @type: String
+             * 포맷 형식, Format String 참조하세요
+             ******
+             * @type: String
              */
             formatWith: {
                 type: String,
@@ -149,6 +144,7 @@ Example:
 
             /**
              * 자동 validation check 활성화 여부
+             ******
              * @type: Boolean
              */
             autoValidate: {
@@ -158,6 +154,7 @@ Example:
 
             /**
              * type이 number일때 활성화 되며 최소값을 정의 합니다.
+             ******
              * @type: Number
              */
             min: {
@@ -166,6 +163,7 @@ Example:
 
             /**
              * type이 number일때 활성화 되며 최대값을 정의 합니다.
+             ******
              * @type: Number
              */
             max: {
@@ -174,6 +172,7 @@ Example:
 
             /**
              * type이 string일때 활성화 되며 입력 최대 길이를 정의 합니다.
+             ******
              * @type: Number
              */
             maxlength: {
@@ -182,6 +181,7 @@ Example:
 
             /**
              * validate 함수를 통해 return 되는 값으로 초기화 하는 변수
+             ******
              * @type: Boolean
              */
             isValid: {
@@ -191,6 +191,7 @@ Example:
 
             /**
              * input field에 반드시 값이 포함되어야 함을 결정 합니다.
+             ******
              * @type: Boolean
              */
             required: {
@@ -200,6 +201,7 @@ Example:
 
             /**
              * input field readonly attribute
+             ******
              * @type: Boolean
              */
             readonly: {
@@ -209,6 +211,7 @@ Example:
 
             /**
              * input field disabled attribute
+             ******
              * @type: Boolean
              */
             disabled: {
@@ -216,10 +219,11 @@ Example:
                 value: false
             },
 
-            /**
+            /*****
              * validation check를 통해 isValid의 값이 false일때 화면에 나타나는 errorMessage
+             ******
              * @type: String
-             */
+             ****/
             errorMessage: {
                 type: String,
                 value: function() {
@@ -229,6 +233,7 @@ Example:
 
             /**
              * tab Index for input field
+             ******
              * @type {Number}
              */
             tabIndex: {
@@ -273,7 +278,7 @@ Example:
             }
         },
 
-        /**
+        /*******
          * en-us
          *
          * focus function
@@ -288,17 +293,16 @@ Example:
             this.$['text-field'].focus();
         },
 
-         /**
+         /********
           * en-us
           *
           * set tab index
-          ******
-          *
+          ********
           * ko-kr
           *
           * tab 하여 index 변화
           * @param  {number} tabIndex : tabIndex값
-          ******
+          *
           */
         setTabindex: function(tabIndex) {
             this.$['text-field'].setAttribute('tabindex', tabIndex);
