value를 change event에 반영

--- a/things-number-field.html
+++ b/things-number-field.html
@@ -67,7 +67,7 @@ Copyright © HatioLab Inc. All rights reserved.
       id="number-field"
       name="[[name]]"
       type="number"
-      bind-value="{{value}}"
+      bind-value="{{value::change}}"
       min="[[min]]"
       max="[[max]]"
       minlength$="[[minlength]]"
