--- a/things-number-field.html
+++ b/things-number-field.html
@@ -221,7 +221,8 @@ Copyright © HatioLab Inc. All rights reserved.
              */
             disabled: {
                 type: Boolean,
-                value: false
+                value: false,
+                computed: 'onComputedDisabled(readonly)'
             },
 
             /*****
@@ -321,6 +322,13 @@ Copyright © HatioLab Inc. All rights reserved.
           */
         setTabindex: function(tabIndex) {
             this.$['text-field'].setAttribute('tabindex', tabIndex);
+        },
+
+        /**
+         * Disabled compute function - value via readonly
+         */
+        onComputedDisabled: function(readonly) {
+            return readonly;
         }
     });
     </script>
