--- a/test/things-number-field_test.html
+++ b/test/things-number-field_test.html
@@ -1,21 +1,20 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
-<!doctype html>
+<!DOCTYPE html>
 
 <html>
   <head>
     <title>things-number-field test</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes" />
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
-    <link rel="import" href="../things-number-field.html">
+    <link rel="import" href="../things-number-field.html" />
   </head>
   <body>
-
     <test-fixture id="basic">
       <template>
         <things-number-field format-with="#,###.000"></things-number-field>
@@ -23,13 +22,11 @@ Copyright © HatioLab Inc. All rights reserved.
     </test-fixture>
 
     <script>
-      suite('things-number-field', function() {
-
-        test('instantiating the element works', function() {
-          var element = fixture('basic');
-          assert.equal(element.is, 'things-number-field');
+      suite("things-number-field", function () {
+        test("instantiating the element works", function () {
+          var element = fixture("basic");
+          assert.equal(element.is, "things-number-field");
         });
-
       });
     </script>
   </body>
