--- a/things-number-import.html
+++ b/things-number-import.html
@@ -1,7 +1,7 @@
 <!--
 @license
-Copyright © HatioLab Inc. All rights reserved.
+Copyright © 2015-2021 Shenzhen Weixun All rights reserved.
 -->
-<link rel="import" href="../polymer/polymer.html">
-<link rel="import" href="../iron-input/iron-input.html">
-<link rel="import" href="../things-libraries/things-numeraljs-lib.html">
+<link rel="import" href="../polymer/polymer.html" />
+<link rel="import" href="../iron-input/iron-input.html" />
+<link rel="import" href="../things-libraries/things-numeraljs-lib.html" />
